# sdm-eurec4a

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .pypirc  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml
.github/envs/: enviroment-py3.12.yml
.github/workflows/: pre-commit.yml  pytest.yaml
docs/: Makefile  conf.py  enviroment.yml  environment.yml  index.md  reference.md  reference.rst  requirements.txt  usage.md
docs/source/: autosummary_index.rst  cloud_and_cluster_identification.rst  data_preprocessing.md  data_preprocessing.rst  pipeline_howto.md
notebooks/: 02-NN-cloud-clusters.ipynb  11-share-clouds-with-sarkar.ipynb  NN-03-compare_cluster_and_clouds.ipynb  NN-04-first-analysis-CLEO.ipynb  NN-05-compare-results-CLEO-for-all-clusters.py  NN-05-eulerian-view-CLEO.ipynb  NN-06-varying-init-height.ipynb  NN-20240712-mass-loss-problems.ipynb  NN-2025-04-07-example-sd-tracing.ipynb  NN_01_first-look-at-obs-final.ipynb  NN_01_first-look-at-obs.ipynb  NN_01_first-look-at-obs.py
notebooks/issues/: 107-different-fit-options-good-setup.ipynb  107-different-fit-options.ipynb  107-lwc-scipy-least-square.ipynb  107-lwc-underestimation.ipynb  112-consecutive-events-by-dimension.ipynb  114-enhance-thermodynamic-fit.ipynb
notebooks/paper/: 01-understand-lwc-profiles.ipynb  01-validate-xi-zeros.ipynb  02-investigation-increasing-lwc.ipynb  02-validate_eulerian_dataset.ipynb  03-first-look-output4.ipynb  04-mass-conservation.ipynb  05-filament-calculation.ipynb  07-mass_conservation_all_clusters copy.ipynb  07-mass_conservation_all_clusters.ipynb  08_compare_microphysics.ipynb  09-vertical-evolution.ipynb  10-compare-observations.ipynb  11-theroretical-mmr-function.ipynb  12-NN-ventilation-effect.ipynb  12-paper-figures-20250305.ipynb  13-FP-evap_theory.ipynb  14-NN-paper-figures.ipynb  15-NN-compare-lwc-nbc.ipynb  15-NN-compare-thermodynamic-profiles.ipynb  17-NN-figure-review-version.ipynb
notebooks/presentation/: compare_results.ipynb  compare_results.py  data.ipynb  full_dataset.ipynb  results.ipynb
notebooks/stationary_analysis/: CB-06-plot-stationary-motion.ipynb  NN-01-mass-change-eulerian.ipynb  NN-02-compare-condensation-calculation.ipynb  eulerian_view.py
notebooks/thesis/: results.ipynb  (+3 more)
tests/: __init__.py  test_calculations.py  test_conversion.py  test_identifications.py  test_main.py  test_reductions.py  test_statistics.py
(+73 files in other folders)
